Fix no wrap on search info

--- a/src/components/SearchInfo.css
+++ b/src/components/SearchInfo.css
@@ -7,8 +7,6 @@
 
     overflow: hidden;
 
-    height: 30px;
-
     opacity: 1;
 
     transition: opacity 0.25s ease-in-out;
